test/data/syntax-errors/function-missing-end.ava
var thisFunction = function () -> var z = 10; return z; var y = 10;
var x = 10;